5300 cleanup gcc warning for cmd/power Reviewed by: Gary Mills <gary_mills@fastmail.fm> Reviewed by: Keith Wesolowski <keith.wesolowski@joyent.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Dan McDonald <danmcd@omniti.com>