usr/src/cmd/power/handlers.c
@@ -585,7 +585,7 @@ devpath(char **destp, char *src, int *errp)
 	 * When the path has ":anything", display an error for
 	 * a non-device or truncate a resolved+modifed path.
 	 */
-	if (cp = strchr(src, ':')) {
+	if ((cp = strchr(src, ':')) != NULL) {
 		if (devok == 0) {
 			mesg(MERR, "physical path may not contain "
 			    "a minor string (%s)\n", src);
@@ -714,7 +714,7 @@ static int
 vlist_append(int **vlistp, int *vcntp, int value)
 {
 	(*vcntp)++;
-	if (*vlistp = realloc(*vlistp, *vcntp * sizeof (**vlistp)))
+	if ((*vlistp = realloc(*vlistp, *vcntp * sizeof (**vlistp))) != NULL)
 		*(*vlistp + *vcntp - 1) = value;
 	else
 		mesg(MERR, alloc_fmt, "threshold list", strerror(errno));
@@ -735,13 +735,13 @@ vlist_append(int **vlistp, int *vcntp, int value)
 static int
 get_thresh(int **vlistp, int *vcntp)
 {
-	int argn, value, gci, grp_cnt = 0, paren = 0, nerr = 0;
+	int argn, value, gci = 0, grp_cnt = 0, paren = 0, nerr = 0;
 	char *rp, *src;
 
 	for (argn = 2; (src = LINEARG(argn)) != NULL; argn++) {
 		if (*src == LPAREN) {
 			gci = *vcntp;
-			if (nerr = vlist_append(vlistp, vcntp, 0))
+			if ((nerr = vlist_append(vlistp, vcntp, 0)) != 0)
 				break;
 			paren = 1;
 			src++;
